# stack

./: CMakeLists.txt  README.md  a.out  stack.cpp
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  empty  init  pop  push
examples/: empty.cpp  init.cpp  pop.cpp  push.cpp
include/: stack.hpp
source/: main.cpp
sources/: main.cpp
